logs/rc_analyzer_20250623_030637.log
2025-06-23 03:06:37,602 - __main__ - INFO - Starting Radiochromic Film Analyzer
2025-06-23 03:06:37,656 - app.rc_analyzer - INFO - Initializing RCAnalyzer application
2025-06-23 03:06:37,660 - app.rc_analyzer - INFO - Cleaned up local temp directory: C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\temp
2025-06-23 03:06:37,660 - app.rc_analyzer - INFO - Cleaned up log and temporary files
2025-06-23 03:06:37,662 - app.utils.config_manager - INFO - Configuration manager initialized
2025-06-23 03:06:37,662 - app.utils.config_manager - INFO - Configuration loaded from file
2025-06-23 03:06:37,680 - app.core.image_processor - INFO - System info: {'platform': 'Windows', 'processor': 'AMD64 Family 23 Model 113 Stepping 0, AuthenticAMD', 'cpu_count': 12, 'memory_gb': 31.94003677368164, 'python_version': '3.12.0', 'opencv_version': '4.11.0'}
2025-06-23 03:06:37,680 - app.core.image_processor - WARNING - CUDA not available, skipping GPU initialization
2025-06-23 03:06:37,680 - app.core.image_processor - INFO - Image processor initialized
2025-06-23 03:06:37,680 - app.utils.file_manager - INFO - File manager initialized
2025-06-23 03:06:37,712 - app.plugins.plugin_manager - ERROR - Failed to load plugin 'auto_measurements': expected an indented block after 'else' statement on line 1290 (auto_measurements.py, line 1293)
Traceback (most recent call last):
  File "C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\app\plugins\plugin_manager.py", line 66, in scan_plugins
    module = self._load_module(name, path)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\app\plugins\plugin_manager.py", line 196, in _load_module
    loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 990, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1128, in get_code
  File "<frozen importlib._bootstrap_external>", line 1058, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\custom_plugins\auto_measurements.py", line 1293
    def start_detection(self):
IndentationError: expected an indented block after 'else' statement on line 1290
2025-06-23 03:06:37,728 - app.ui.image_panel - INFO - Image panel initialized
2025-06-23 03:06:37,745 - app.ui.measurement_panel - INFO - Measurement panel initialized
2025-06-23 03:06:37,757 - app.ui.image_settings_panel - INFO - Image settings panel initialized
2025-06-23 03:06:37,760 - app.ui.main_window - INFO - Main window initialized
2025-06-23 03:06:37,760 - app.rc_analyzer - INFO - RCAnalyzer initialization complete
2025-06-23 03:06:40,951 - app.rc_analyzer - INFO - Saving configuration before exit
2025-06-23 03:06:40,952 - app.utils.config_manager - INFO - Configuration saved to file
2025-06-23 03:06:40,955 - app.rc_analyzer - INFO - Cleaned up local temp directory: C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\temp
2025-06-23 03:06:40,955 - app.rc_analyzer - INFO - Cleaned up log and temporary files
2025-06-23 03:06:41,074 - __main__ - INFO - Application closed normally
